Create a `Docker.Literal` with optional quotes